kubernetes/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          securityContext:
            privileged: false
          image: postgres:16.4
          ports:
            - containerPort: 5432
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
            - name: postgres-init
              mountPath: /docker-entrypoint-initdb.d/init.sql
              subPath: init.sql
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-init
          configMap:
            name: postgres-init
        - name: postgres-data
          emptyDir: {}
