kubernetes/data-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: data-service
spec:
  type: NodePort
  selector:
    app: data-service
  ports:
    - port: 80
      targetPort: 5000
      nodePort: 30008
