kubernetes/network-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-data
spec:
  podSelector:
    matchLabels:
      app: data-service
  policyTypes:
  - Ingress
